--- a/templates/agregarPalabra.html
+++ b/templates/agregarPalabra.html
@@ -2,9 +2,9 @@
 {% block content %}
     <h1>Agregar palabra a adivinar</h1>
     <br>
-    <form class="centrar-texto" action="" method="get">
-        <label for="">Palabra a agregar:  </label>
-        <input type="text">
+    <form class="centrar-texto" action="" method="POST">
+        <label for="palabra">Palabra a agregar:  </label>
+        <input id = "palabra" name = "palabra" type = "text">
         <br><br>
         <input type="submit" value="Agregar">
     </form>
