Corregido el teclado

--- a/templates/main.html
+++ b/templates/main.html
@@ -17,35 +17,64 @@
     </div>
     <div id="teclado">
         <div class="centrar">
-            <button class="letra">Q</button>
-            <button class="letra">W</button>
-            <button class="letra">E</button>
-            <button class="letra">R</button>
-            <button class="letra">T</button>
-            <button class="letra">Y</button>
-            <button class="letra">U</button>
-            <button class="letra">I</button>
-            <button class="letra">O</button>
-            <button class="letra">P</button>
+            <button class="letra" onclick="mandarLetra()" id="a" name="a">A</button>
+            <button class="letra" onclick="mandarLetra()" id="b" name="b">B</button>
+            <button class="letra" onclick="mandarLetra()" id="c" name="c">C</button>
+            <button class="letra" onclick="mandarLetra()" id="d" name="d">D</button>
+            <button class="letra" onclick="mandarLetra()" id="e" name="e">E</button>
+            <button class="letra" onclick="mandarLetra()" id="f" name="f">F</button>
+            <button class="letra" onclick="mandarLetra()" id="g" name="g">G</button>
+            <button class="letra" onclick="mandarLetra()" id="h" name="h">H</button>
+            <button class="letra" onclick="mandarLetra()" id="i" name="i">I</button>
+            <button class="letra" onclick="mandarLetra()" id="j" name="j">J</button>
             <br><br>
-            <button class="letra">A</button>
-            <button class="letra">S</button>
-            <button class="letra">D</button>
-            <button class="letra">F</button>
-            <button class="letra">G</button>
-            <button class="letra">H</button>
-            <button class="letra">J</button>
+            <button class="letra" onclick="mandarLetra()" id="k" name="k">K</button>
+            <button class="letra" onclick="mandarLetra()" id="l" name="l">L</button>
+            <button class="letra" onclick="mandarLetra()" id="m" name="m">M</button>
+            <button class="letra" onclick="mandarLetra()" id="n" name="n">N</button>
+            <button class="letra" onclick="mandarLetra()" id="ñ" name="ñ">Ñ</button>
+            <button class="letra" onclick="mandarLetra()" id="o" name="o">O</button>
+            <button class="letra" onclick="mandarLetra()" id="p" name="p">P</button>
+            <button class="letra" onclick="mandarLetra()" id="q" name="q">Q</button>
+            <button class="letra" onclick="mandarLetra()" id="r" name="r">R</button>
+            <button class="letra" onclick="mandarLetra()" id="s" name="s">S</button>
+            <br><br>
+            <button class="letra" onclick="mandarLetra()" id="t" name="t">T</button>
+            <button class="letra" onclick="mandarLetra()" id="u" name="u">U</button>
+            <button class="letra" onclick="mandarLetra()" id="v" name="v">V</button>
+            <button class="letra" onclick="mandarLetra()" id="w" name="w">W</button>
+            <button class="letra" onclick="mandarLetra()" id="x" name="x">X</button>
+            <button class="letra" onclick="mandarLetra()" id="y" name="y">Y</button>
+            <button class="letra" onclick="mandarLetra()" id="z" name="z">Z</button>
+            <!-- <button class="letra" onclick="">A</button>
+            <button class="letra" onclick="">B</button>
+            <button class="letra" onclick="">C</button>
+            <button class="letra" onclick="">D</button>
+            <button class="letra" onclick="">E</button>
+            <button class="letra" onclick="">F</button>
+            <button class="letra" onclick="">G</button>
+            <button class="letra" onclick="">H</button>
+            <button class="letra" onclick="">I</button>
+            <button class="letra" onclick="">J</button>
+            <br><br>
             <button class="letra">K</button>
             <button class="letra">L</button>
-            <button class="letra">Ñ</button>
-            <br><br>
-            <button class="letra">Z</button>
-            <button class="letra">X</button>
-            <button class="letra">C</button>
-            <button class="letra">V</button>
-            <button class="letra">B</button>
-            <button class="letra">N</button>
             <button class="letra">M</button>
+            <button class="letra">N</button>
+            <button class="letra">Ñ</button>
+            <button class="letra">O</button>
+            <button class="letra">P</button>
+            <button class="letra">Q</button>
+            <button class="letra">R</button>
+            <button class="letra">S</button>
+            <br><br>
+            <button class="letra">T</button>
+            <button class="letra">U</button>
+            <button class="letra">V</button>
+            <button class="letra">W</button>
+            <button class="letra">X</button>
+            <button class="letra">Y</button>
+            <button class="letra">Z</button> -->
         </div>
     </div>
 </div>
