--- a/templates/main.html
+++ b/templates/main.html
@@ -17,35 +17,35 @@
     </div>
     <div id="teclado">
         <div class="centrar">
-            <button class="letra" onclick="mandarLetra()" id="a" name="a">A</button>
-            <button class="letra" onclick="mandarLetra()" id="b" name="b">B</button>
-            <button class="letra" onclick="mandarLetra()" id="c" name="c">C</button>
-            <button class="letra" onclick="mandarLetra()" id="d" name="d">D</button>
-            <button class="letra" onclick="mandarLetra()" id="e" name="e">E</button>
-            <button class="letra" onclick="mandarLetra()" id="f" name="f">F</button>
-            <button class="letra" onclick="mandarLetra()" id="g" name="g">G</button>
-            <button class="letra" onclick="mandarLetra()" id="h" name="h">H</button>
-            <button class="letra" onclick="mandarLetra()" id="i" name="i">I</button>
-            <button class="letra" onclick="mandarLetra()" id="j" name="j">J</button>
+            <button class="letra" id="a" name="a" value="a">A</button>
+            <button class="letra" id="b" name="b" value="b">B</button>
+            <button class="letra" id="c" name="c" value="c">C</button>
+            <button class="letra" id="d" name="d" value="d">D</button>
+            <button class="letra" id="e" name="e" value="e">E</button>
+            <button class="letra" id="f" name="f" value="f">F</button>
+            <button class="letra" id="g" name="g" value="g">G</button>
+            <button class="letra" id="h" name="h" value="h">H</button>
+            <button class="letra" id="i" name="i" value="i">I</button>
+            <button class="letra" id="j" name="j" value="j">J</button>
             <br><br>
-            <button class="letra" onclick="mandarLetra()" id="k" name="k">K</button>
-            <button class="letra" onclick="mandarLetra()" id="l" name="l">L</button>
-            <button class="letra" onclick="mandarLetra()" id="m" name="m">M</button>
-            <button class="letra" onclick="mandarLetra()" id="n" name="n">N</button>
-            <button class="letra" onclick="mandarLetra()" id="ñ" name="ñ">Ñ</button>
-            <button class="letra" onclick="mandarLetra()" id="o" name="o">O</button>
-            <button class="letra" onclick="mandarLetra()" id="p" name="p">P</button>
-            <button class="letra" onclick="mandarLetra()" id="q" name="q">Q</button>
-            <button class="letra" onclick="mandarLetra()" id="r" name="r">R</button>
-            <button class="letra" onclick="mandarLetra()" id="s" name="s">S</button>
+            <button class="letra" id="k" name="k" value="k">K</button>
+            <button class="letra" id="l" name="l" value="l">L</button>
+            <button class="letra" id="m" name="m" value="m">M</button>
+            <button class="letra" id="n" name="n" value="n">N</button>
+            <button class="letra" id="ñ" name="ñ" value="ñ">Ñ</button>
+            <button class="letra" id="o" name="o" value="o">O</button>
+            <button class="letra" id="p" name="p" value="p">P</button>
+            <button class="letra" id="q" name="q" value="q">Q</button>
+            <button class="letra" id="r" name="r" value="r">R</button>
+            <button class="letra" id="s" name="s" value="s">S</button>
             <br><br>
-            <button class="letra" onclick="mandarLetra()" id="t" name="t">T</button>
-            <button class="letra" onclick="mandarLetra()" id="u" name="u">U</button>
-            <button class="letra" onclick="mandarLetra()" id="v" name="v">V</button>
-            <button class="letra" onclick="mandarLetra()" id="w" name="w">W</button>
-            <button class="letra" onclick="mandarLetra()" id="x" name="x">X</button>
-            <button class="letra" onclick="mandarLetra()" id="y" name="y">Y</button>
-            <button class="letra" onclick="mandarLetra()" id="z" name="z">Z</button>
+            <button class="letra" id="t" name="t" value="t">T</button>
+            <button class="letra" id="u" name="u" value="u">U</button>
+            <button class="letra" id="v" name="v" value="v">V</button>
+            <button class="letra" id="w" name="w" value="w">W</button>
+            <button class="letra" id="x" name="x" value="x">X</button>
+            <button class="letra" id="y" name="y" value="y">Y</button>
+            <button class="letra" id="z" name="z" value="z">Z</button>
             <!-- <button class="letra" onclick="">A</button>
             <button class="letra" onclick="">B</button>
             <button class="letra" onclick="">C</button>
