--- a/templates/agregarPalabra.html
+++ b/templates/agregarPalabra.html
@@ -4,8 +4,9 @@
     <br>
     <form class="centrar-texto"  action="" method="POST">
         <label for="palabra">Palabra a agregar:  </label>
-        <input id = "palabra" name = "palabra" type = "text" pattern="[A-Z a-z]*">
+        <input id = "palabra" name = "palabra" type = "text" pattern="[A-Z a-z]*" maxlength="8" required>
         <br><br>
         <input type="submit" value="Agregar">
+        <p>el tamaño es: {{tamaño}}</p>
     </form>
 {% endblock %}
