--- a/templates/main.html
+++ b/templates/main.html
@@ -7,13 +7,9 @@
     </div>
     <div class="centrar-texto">
         <p>aqui van las letras a adivinar</p>
-        <div class="letras">
-            <input type="text" class="linea">
-            <input type="text" class="linea">
-            <input type="text" class="linea">
-            <input type="text" class="linea">
-            <br><br>
+        <div class="letras" id="espacios">
         </div>
+        <br><br>
     </div>
     <div id="teclado">
         <div class="centrar">
@@ -46,37 +42,10 @@
             <button class="letra" id="x" name="x" value="x">X</button>
             <button class="letra" id="y" name="y" value="y">Y</button>
             <button class="letra" id="z" name="z" value="z">Z</button>
-            <!-- <button class="letra" onclick="">A</button>
-            <button class="letra" onclick="">B</button>
-            <button class="letra" onclick="">C</button>
-            <button class="letra" onclick="">D</button>
-            <button class="letra" onclick="">E</button>
-            <button class="letra" onclick="">F</button>
-            <button class="letra" onclick="">G</button>
-            <button class="letra" onclick="">H</button>
-            <button class="letra" onclick="">I</button>
-            <button class="letra" onclick="">J</button>
-            <br><br>
-            <button class="letra">K</button>
-            <button class="letra">L</button>
-            <button class="letra">M</button>
-            <button class="letra">N</button>
-            <button class="letra">Ñ</button>
-            <button class="letra">O</button>
-            <button class="letra">P</button>
-            <button class="letra">Q</button>
-            <button class="letra">R</button>
-            <button class="letra">S</button>
-            <br><br>
-            <button class="letra">T</button>
-            <button class="letra">U</button>
-            <button class="letra">V</button>
-            <button class="letra">W</button>
-            <button class="letra">X</button>
-            <button class="letra">Y</button>
-            <button class="letra">Z</button> -->
         </div>
     </div>
 </div>
-
+<script type="text/javascript">
+    generarEspacios({{tamaño}})
+ </script>
 {% endblock %}
