Cambio de las imagenes
Ya se cambian las imagenes de las partes del ahorcado

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 <div>
     <h1>Juego del ahorcado</h1>
     <div id="cuerpo">
-        <img src="{{ url_for('static',filename='img/imagen_cuerpo_0.png') }}" alt="">
+        <img id="imagen" src="{{ url_for('static',filename='img/imagen_cuerpo_0.png') }}" alt="">
     </div>
     <div class="centrar-texto">
         <p>aqui van las letras a adivinar</p>
