PROYECTO LISTO Y MUERTO
YA ACABE SLEEP TIME
SLEEP(800000)

--- a/templates/agregarPalabra.html
+++ b/templates/agregarPalabra.html
@@ -6,7 +6,7 @@
         <label for="palabra">Palabra a agregar:  </label>
         <input id = "palabra" name = "palabra" type = "text" pattern="[A-Z a-z]*" maxlength="8" required>
         <br><br>
-        <input type="submit" value="Agregar">
-        <p>el tamaño es: {{tamaño}}</p>
+        <input type="submit" value="Agregar" class="btn-primary btn-lg">
+        <!-- <p>el tamaño es: {{tamaño}}</p> -->
     </form>
 {% endblock %}
