--- a/templates/ganar.html
+++ b/templates/ganar.html
@@ -1,4 +1,11 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 <h1>Ganaste</h1>
-{% endblock %}
+<div class="centrar-texto">
+    <img id="" src="{{ url_for('static',filename='img/trofeo.png') }}" alt="">
+    <div>
+        <a class="btn btn-warning btn-lg letra-grande" href="/">
+            Aceptar
+        </a>
+    </div>
+</div>
+<link rel="stylesheet" href="{{ url_for('static',filename='css/ganar.css') }}"> {% endblock %}
